update template to pass items and add Electronics view

--- a/Globomantics/globomantics/store/templates/store/list.html
+++ b/Globomantics/globomantics/store/templates/store/list.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
 	<meta charset = "UTF-8">
 	<title>Electronics Page</title>
-
 </head>
 <body>
 
@@ -25,20 +22,19 @@
 		{% endfor %}
 	</tbody>
 </table>
-
-
-{% if items.has_other_pages %}
-
+<br>
+<br>
+ {% if items.has_other_pages %}
 <table>
 	<tr class= "pagination">
 		{% if items.has_previous %}
-			<td><a href="?page={{ items.previous_page_number }}">&laquo;</a></td>
+			<td><a href="?page = {{ items.previous_page_number }}">&laquo;</a</td>
 		{% else %}
-			<td class ="disabled"><span>&laquo;</span></td>
-		{%endif %}
+			<td class="disabled"><span>&laquo;</span></td>
+		{% endif %}
 		{% for i in items.paginator.page_range %}
 			{% if items.number == i %}
-				<td class="active"><span>{{i}} <span class="sr-only">(current)</span></span></td>
+				<td class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></td>
 			{% else %}
 				<td><a href="?page={{ i }}">{{ i }}</a></td>
 			{% endif %}
@@ -50,9 +46,32 @@
 		{% endif %}
 	</tr>
 	{% endif %}
+    </table>
+
+
+	<table>
+	{% if is_paginated %}
+	<tr class= "pagination">
+	{% if page_obj.has_previous %}
+			<td>
+				<span><a href="?page={{ page_obj.previous_page_number }}">Previous</a></span>
+			</td>
+	{% endif %}
+		<td class ="">
+				<span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages}}. </span>
+		</td>
+
+	{% if page_obj.has_next %}
+		<td>
+			<span><a href="?page ={{ page_obj.next_page_number }}">Next</a></span>
+		</td>
+	{% endif %}
+	 </tr>
+	{% endif %}
 </table>
 
 </body>
+</html>
 
 
 
