add if else to count cookies to electronic view views.py, update html to show count, and uncomment electronics view in urls.py

--- a/Globomantics/globomantics/store/templates/store/list.html
+++ b/Globomantics/globomantics/store/templates/store/list.html
@@ -7,7 +7,7 @@
 <body>
 
 
-<h1>Hello there, globomantics e-commerce store front Electronics pages coming here</h1>
+<h1>Hello there, You have visited the Globomantics store {{ request.COOKIES.visits|default:"1" }} times</h1>
 <table class="table table-bordered">
 	<thead>
 		<tr>
